--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,3 +172,7 @@ form.no-top-margin .clr-form-control {
     opacity: 1 !important;
   }
 }
+
+.dropdown-menu .btn clr-icon {
+    transform: none;
+}
