--- a/src/app/accordion/accordion.component.html
+++ b/src/app/accordion/accordion.component.html
@@ -146,9 +146,9 @@
             <div class="title-with-progress">
                 Servers (health check is running) <div><span class="badge badge-info">15</span>
                     <clr-signpost (click)="preventClickBubbling($event)">
-                        <clr-signpost-content *clrIfOpen>
+                        <clr-signpost-content *clrIfOpen [clrPosition]="'top-left'">
                             <h3>Default Signpost</h3>
-                            <p>Position: <code class="clr-code">right-middle</code></p>
+                            <p>Position: <code class="clr-code">top-left</code></p>
                         </clr-signpost-content>
                     </clr-signpost>
                 </div>
@@ -163,9 +163,9 @@
             <div class="title-with-progress">
                 Storage devices (checked for viruses) <div><span class="badge badge-success">15</span>
                     <clr-signpost (click)="preventClickBubbling($event)">
-                        <clr-signpost-content *clrIfOpen>
+                        <clr-signpost-content *clrIfOpen [clrPosition]="'top-left'">
                             <h3>Default Signpost</h3>
-                            <p>Position: <code class="clr-code">right-middle</code></p>
+                            <p>Position: <code class="clr-code">top-left</code></p>
                         </clr-signpost-content>
                     </clr-signpost>
                 </div>
@@ -180,9 +180,9 @@
             <div class="title-with-progress">
                 Backup tasks (failed for few locations) <div><span class="badge badge-danger">15</span>
                     <clr-signpost (click)="preventClickBubbling($event)">
-                        <clr-signpost-content *clrIfOpen>
+                        <clr-signpost-content *clrIfOpen [clrPosition]="'top-left'">
                             <h3>Default Signpost</h3>
-                            <p>Position: <code class="clr-code">right-middle</code></p>
+                            <p>Position: <code class="clr-code">top-left</code></p>
                         </clr-signpost-content>
                     </clr-signpost>
                 </div>
